Changes for 1.7
* Created new AI specially for multiplayer free-for-all games, "Does Nothing AI", which will buy units the first round then destroy all money all subsequent rounds, along with doing nothing else. (veqryn)

* Abstracted methods to find the power and rolls of units into a single method. (veqryn)

* Fixed issue with Marine amphibious attackers showing a bonus on the battle screen even when attacking via land. (veqryn)

* Fixed null pointer error in Strong AI (Moore AI). (veqryn)

* Getting the UnitSupportAttachment faction option to handle both allied and enemy, thereby allowing giving positive or negative support to enemy units. (veqryn)

* Getting the UnitSupportAttachment dice option to handle both strength and roll, thereby allowing giving extra rolls to units. (veqryn)

* Changing defending submarines to fire after all attacking units under classic rules, where property Defending Subs Sneak Attack is false. (veqryn) 

* Created new button, "Order of Losses", in the battle calculator, which will all you to put in a text script of which casualties to select in what order. (veqryn)

* Added option to retreat in battle calculator when we are losing, which is approximated by seeing if our 'meta-power' is lower than the opponent's. (veqryn)

* Created new image utility, TileImageReconstructor, which will recreate an image based on base tiles or relief tiles and/or draw a polygons file onto an image. (veqryn)

* Adding a visual log to AutoPlacementFinder and TileImageBreaker, and getting the AutoPlacementFinder to cut out at a max of about 50 placements per territory. (veqryn)

* Changed unit attachment "isMarine" to allow for integers instead of boolean. (veqryn)

* Updated default casualty selection to take territory effects into consideration. (veqryn)

* Updating web poster to keep track of many entered websites, and save them all to the local cache but not to the savegame. (veqryn)
